--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   Programs<i class="fa fa-angle-down"></i>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbar3">
-                  <a class="dropdown-item " href="index.html">
+                  <a class="dropdown-item " href="python-course.html">
                     Python Training
                   </a>
                   <a class="dropdown-item " href="index-2.html">
@@ -79,12 +79,12 @@
                 </div>
               </li>
               <li class="nav-item ">
-                <a href="#" class="nav-link js-scroll-trigger">
+                <a href="placement.html" class="nav-link js-scroll-trigger">
                   Placements
                 </a>
               </li>
               <li class="nav-item ">
-                <a href="#" class="nav-link js-scroll-trigger">
+                <a href="about.html" class="nav-link js-scroll-trigger">
                   About Us
                 </a>
               </li>
@@ -94,7 +94,7 @@
                 </a>
               </li>
               <li class="nav-item ">
-                <a href="#" class="nav-link">
+                <a href="contact.html" class="nav-link">
                   Contact
                 </a>
               </li>
